# gitauri

./: .gitignore  Cargo.toml  README.md  index.html  jsconfig.json  package-lock.json  package.json  tauri.conf.json
app/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
app/src/: lib.rs  main.rs
app/tests/: test_app_greeting.rs
base/src/: lib.rs
base/tests/: test_base_add.rs
gui/: App.svelte  Cargo.toml
gui/lib/: Greet.svelte
gui/src/: cmd.rs  lib.rs  main.rs
gui/tests/: test_gui_greeting.rs
src/: cmd.rs  lib.rs
ui/: index.html
